
  render :partial => 'other_people', :collection => @people, :as => :person
  
  This will let you access objects of @people as 'person' local variable inside 'other_people' partial template.

* time_zone_select: support for regexp matching of priority zones. Resolves #195 [Ernie Miller]

* Made ActionView::Base#render_file private [Josh Peek]

* Remove follow_redirect from controller functional tests.

	If you want to follow redirects you can use integration tests.  The functional test
	version was only useful if you were using redirect_to :id=>...

* Fix polymorphic_url with singleton resources.  #461 [Tammer Saleh]

* Replaced TemplateFinder abstraction with ViewLoadPaths [Josh Peek]

* Added block-call style to link_to [Sam Stephenson/DHH]. Example:

    <% link_to(@profile) do %>
      <strong><%= @profile.name %></strong> -- <span>Check it out!!</span>
    <% end %>

* Performance: integration test benchmarking and profiling.  [Jeremy Kemper]

* Make caching more aware of mime types. Ensure request format is not considered while expiring cache.  [Jonathan del Strother]

* Drop ActionController::Base.allow_concurrency flag [Josh Peek]

* More efficient concat and capture helpers. Remove ActionView::Base.erb_variable.  [Jeremy Kemper]

* Added page.reload functionality. Resolves #277. [Sean Huber]

* Fixed Request#remote_ip to only raise hell if the HTTP_CLIENT_IP and HTTP_X_FORWARDED_FOR doesn't match (not just if they're both present) [Mark Imbriaco, Bradford Folkens]

* Allow caches_action to accept a layout option [José Valim]

* Added Rack processor [Ezra Zygmuntowicz, Josh Peek]


*2.1.0 (May 31st, 2008)*

* InstanceTag#default_time_from_options overflows to DateTime [Geoff Buesing]

* Fixed that forgery protection can be used without session tracking (Peter Jones) [#139]

* Added session(:on) to turn session management back on in a controller subclass if the superclass turned it off (Peter Jones) [#136]
